--- a/src/ClientLib.Admin/ClientLib.Admin.csproj
+++ b/src/ClientLib.Admin/ClientLib.Admin.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net7.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <RootNamespace>UnitedSystemsCooperative.Web.ClientLib.Admin</RootNamespace>
     </PropertyGroup>
 
 
