--- a/src/ClientLib.Massacre/ClientLib.Massacre.csproj
+++ b/src/ClientLib.Massacre/ClientLib.Massacre.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net7.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <RootNamespace>UnitedSystemsCooperative.Web.ClientLib.Massacre</RootNamespace>
     </PropertyGroup>
 
 
