--- a/src/Client/Client.csproj
+++ b/src/Client/Client.csproj
@@ -16,6 +16,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\ClientLib.About\ClientLib.About.csproj" />
 		<ProjectReference Include="..\ClientLib.Admin\ClientLib.Admin.csproj" />
 		<ProjectReference Include="..\ClientLib.Information\ClientLib.Information.csproj" />
 		<ProjectReference Include="..\ClientLib.Massacre\ClientLib.Massacre.csproj" />
