--- a/src/Server/Server.csproj
+++ b/src/Server/Server.csproj
@@ -16,5 +16,9 @@
 		<ProjectReference Include="..\Shared\Shared.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Controllers\" />
+	</ItemGroup>
+
 
 </Project>
