--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -57,8 +57,8 @@ jobs:
             # mandatory
             -Dsonar.projectKey=unitedsystemscooperative_dotnet
             -Dsonar.organization=unitedsystemscooperative
-            -Dsonar.sources=src
-            -Dsonar.tests=test
+#             -Dsonar.sources=src
+#             -Dsonar.tests=test
             # When you need the analysis to take place in a directory other than the one from which it was launched
             #-Dsonar.projectBaseDir= # optional, default is .
             # Comma-separated paths to directories containing test source files.
